# Huffman

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.comp  test.txt
doc/: README.md  requirement.md
include/: decode.h  encode.h  macro.h  tree.h
src/: CMakeLists.txt  decode.cpp  encode.cpp  main.cpp  tree.cpp
